fixed all errors